src/test/ui/impl-trait/static-return-lifetime-infered.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/static-return-lifetime-infered.rs:17:16
   |
LL |         self.x.iter().map(|a| a.0)
   |                ^^^^

warning: not reporting region error due to nll
  --> $DIR/static-return-lifetime-infered.rs:21:16
   |
LL |         self.x.iter().map(|a| a.0)
   |                ^^^^

error: free region `` does not outlive free region `'static`
  --> $DIR/static-return-lifetime-infered.rs:17:9
   |
LL |         self.x.iter().map(|a| a.0)
   |         ^^^^^^^^^^^^^

error: free region `'a` does not outlive free region `'static`
  --> $DIR/static-return-lifetime-infered.rs:21:9
   |
LL |         self.x.iter().map(|a| a.0)
   |         ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

